--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -39,11 +39,11 @@
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="text-right text-white float-left mr-1 mt-2" href="{% url 'profile'%}">Logged in
+            <a class="text-right text-white float-left mr-1 mt-3" href="{% url 'profile'%}">Logged in
               as {{ user.username }}</a>
           </li>
           {% if user.profile.profile_picture %}
-          <div class="ml-2 mr-2">
+          <div class="ml-2 mr-2 mt-2 mb-2">
             <svg width="40" height="40">
               <pattern id="pattern" width="100%" height="100%">
                 <image xlink:href="{{ user.profile.profile_picture.url }}" width="40" height="40"
