--- a/todo/templates/todo/currenttodos.html
+++ b/todo/templates/todo/currenttodos.html
@@ -11,7 +11,7 @@
     </div>
 </div>
 <div class="row justify-content-center mt-5">
-    <div class="col-md-7">
+    <div class="col-md-7 pl-3 pr-5">
         <ul style="list-style: none;">
             {% if todos %}
                 {% for todo in todos %}
