--- a/todo/templates/todo/profile.html
+++ b/todo/templates/todo/profile.html
@@ -55,7 +55,7 @@
         {% if user.profile.profile_picture %}
               <img src="{{ user.profile.profile_picture.url }}"
                    class="rounded-circle center-block"
-                   style="max-width: 100%; height: auto; object-fit: cover">
+                   style="width: 200px; height: 200px; object-fit: cover">
         {% else %}
             <p></p>
         {% endif %}
